fix grid overflow

--- a/src/styling/Shop.module.css
+++ b/src/styling/Shop.module.css
@@ -1,6 +1,6 @@
 .productCardContainer{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     column-gap: 1rem;
     row-gap: 1rem;
     padding: 1rem;
@@ -25,8 +25,10 @@ h1 {
     right: 0;
 
     min-width: 50%;
+    max-height: 80%;
 
     padding: 2rem;
+    overflow-y: auto;
 }
 
 .checkoutButton{
@@ -67,4 +69,11 @@ h1 {
 tr, th, td{
     text-align: left;
     padding-bottom: 2rem;
+}
+
+.cartCloseBtn{
+    width: fit-content;
+    margin-left: auto;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
